Fix: word-search component's target elements now stay aligned with the proper cell and update on window resize

--- a/src/app/about/word-search/word-search.component.scss
+++ b/src/app/about/word-search/word-search.component.scss
@@ -6,6 +6,10 @@ span {
   justify-content: center;
 }
 
+h1 {
+  margin-bottom: 0;
+}
+
 .word-search-wrapper {
   width: fit-content;
 }
